# voxely-wfc-playground

./: Cargo.toml  README.md
assets/: selection_point.ply  tile_config.ron  wfc_parts.ply
src/: demo_stage.rs  geometry.rs  main.rs  selection_point_grid.rs  tile_config.rs  utility.rs  voxel_mesh.rs
