[package]
name = "voxely-wfc-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-tiled-wfc = "0.7.7"
orom-miniquad = { git = "https://github.com/madwareru/orom-miniquad", version = "0.4.1" }
glam = "0.20"
serde = {version = "1.0", features = ["derive"] }
ron = "0.7"
parry3d = "0.7.1"
rand = "0.8.4"
rayon = "1.5.1"
egui = "0.15"
